dark mode default fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,9 @@ main {
   zoom: 0.8; /* fix para mac window size */
 }
 
+:root {
+  --color-scheme: dark;
+}
 
 
 /* :root {
